We fixed the footer to stick to the bottom by wrapping the flexbox making app the parent and the div under it the child

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,8 @@
 body {
 	background: url("../images/res.jpg");
+}
+
+#app>div{
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
